--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:test": "dotenv -e .env.test.local -- next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "dotenv -e .env.local -- drizzle-kit generate",
+    "db:migrate": "dotenv -e .env.local -- drizzle-kit migrate",
+    "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
+    "test:db:generate": "dotenv -e .env.test.local -- drizzle-kit generate",
+    "test:db:migrate": "dotenv -e .env.test.local -- drizzle-kit migrate",
+    "test:setup": "npm run test:db:migrate && npm run test:seed",
+    "test:seed": "dotenv -e .env.test.local -- tsx scripts/seed-test-data.ts",
+    "test:clean": "dotenv -e .env.test.local -- tsx scripts/clean-test-data.ts",
+    "test:reset": "npm run test:clean && npm run test:setup",
+    "test": "dotenv -e .env.test.local -- jest --config=jest.config.mjs",
+    "test:watch": "dotenv -e .env.test.local -- jest --config=jest.config.mjs --watch"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -32,15 +44,24 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.4",
+    "@types/pg": "^8.15.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
@@ -49,14 +70,21 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
