--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "test:clean": "dotenv -e .env.test.local -- tsx scripts/clean-test-data.ts",
     "test:reset": "npm run test:clean && npm run test:setup",
     "test": "dotenv -e .env.test.local -- jest --config=jest.config.mjs",
-    "test:watch": "dotenv -e .env.test.local -- jest --config=jest.config.mjs --watch"
+    "test:watch": "dotenv -e .env.test.local -- jest --config=jest.config.mjs --watch",
+    "db:drop": "dotenv -e .env.local -- tsx scripts/drop-tables.ts",
+    "test:db:drop": "dotenv -e .env.test.local -- tsx scripts/drop-tables.ts"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@clerk/nextjs": "^6.35.5",
     "@faker-js/faker": "^9.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -50,8 +53,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.50.4",
     "@tanstack/react-query": "^5.90.11",
     "@types/pg": "^8.15.4",
     "class-variance-authority": "^0.7.1",
